<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ticket_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_ticket"
        android:textStyle="bold"
        android:textSize="30sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="100dp"
        android:paddingBottom="60dp"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dropdown_ticket_type"
        app:layout_constraintTop_toBottomOf="@id/ticket_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="20dp"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dropdown_priority"
        app:layout_constraintTop_toBottomOf="@id/ticket_text"
        app:layout_constraintLeft_toRightOf="@id/dropdown_ticket_type"
        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/ticket_est"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/est"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@id/dropdown_priority"
        app:layout_constraintTop_toBottomOf="@id/ticket_text"
        />
    <EditText
        android:id="@+id/ticket_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ticket_title"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dropdown_priority"/>
    <EditText
        android:id="@+id/ticket_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/ticket_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:maxLines="4"
        app:layout_constraintTop_toBottomOf="@id/ticket_title"/>

    <Button
        android:id="@+id/add_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add new ticket"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>