<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailsActivity">

    <ImageView
        android:id="@+id/ticketPictureDetailsIv"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/ticketTitleDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticketPictureDetailsIv"
        android:text="Enhancment 1"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket_type"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticketTitleDetails"
        android:layout_margin="15dp"
        />
    <TextView
        android:id="@+id/prior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tt"
        android:layout_margin="15dp"
        />
    <TextView
        android:id="@+id/estim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estimation"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prior"
        android:layout_margin="15dp"
        />
    <TextView
        android:id="@+id/logg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logged_time"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estim"
        android:layout_margin="15dp"
        />
    <TextView
        android:id="@+id/ticdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ticket_desc"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logg"
        android:layout_margin="15dp"
        />

    <TextView
        android:id="@+id/ticketTypeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enchancment."
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticketTitleDetails"
        android:layout_margin="15dp"
        />
    <TextView
        android:id="@+id/ticketPriorityDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enchancment."
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tt"
        android:layout_margin="15dp"
        />

   <Button
       android:id="@+id/estButton"
       android:layout_width="50dp"
       android:layout_height="50dp"
       android:text="55"
       android:textSize="12sp"
       app:layout_constraintTop_toBottomOf="@id/prior"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginRight="15dp"/>
    <Button
        android:id="@+id/loggedTimeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="5"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/estim"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="15dp"/>

    <TextView
        android:id="@+id/ticketDescDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:text="TTicket desc kmca njdwa mklmca lkmnd lknmm cawlk dwadwa lk walk ca wlkmn"

        android:textSize="12dp"
        android:textStyle="bold"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticdesc" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        android:id="@+id/editDetails"
        />

</androidx.constraintlayout.widget.ConstraintLayout>