<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/jira_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:text="Raf Jira statistics"/>
    <TextView
        android:id="@+id/text_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo"
        android:textColor="#EF4F4F"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/jira_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@+id/text_todo_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20"
        android:textColor="#EF4F4F"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/jira_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        />
    <TextView
        android:id="@+id/text_todo_enchancements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enchancements"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_todo"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/text_todo_enchancements_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_todo_total"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/text_todo_bugs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bugs"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_todo_enchancements"
        app:layout_constraintTop_toBottomOf="@id/text_todo_enchancements"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/text_todo_bugs_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_todo_enchancements_total"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/text_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_progress"
        android:textColor="#FFC107"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_todo_bugs"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/text_progress_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20"
        android:textColor="#FFC107"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_todo_bugs"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/text_progress_enchancements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enchancements"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_progress"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/text_progress_enchancements_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_progress_total"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/text_progress_bugs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bugs"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_progress_enchancements"
        app:layout_constraintTop_toBottomOf="@id/text_progress_enchancements"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/text_progress_bugs_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_progress_enchancements_total"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        />

    <TextView
        android:id="@+id/text_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="#8BC34A"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_progress_bugs"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/text_done_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20"
        android:textColor="#8BC34A"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_progress_bugs"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/text_done_enchancements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enchancements"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_done"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/text_done_enchancements_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_done_total"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/text_done_bugs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bugs"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_done_enchancements"
        app:layout_constraintTop_toBottomOf="@id/text_done_enchancements"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/text_done_bugs_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_done_enchancements_total"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>